syncdoc-core/tests/snapshots/negative__basic_function_gets_documented.snap
---
source: syncdoc-core/tests/negative.rs
expression: "test_with_code(\"test_basic_function_gets_documented\", code)"
---
#![doc = include_str!("../docs/lib.md")]

use syncdoc::omnidoc;

#[omnidoc(path = "docs")]

fn real_function() {
    println!("Real function");
}
