syncdoc-core/tests/snapshots/negative__complex_edge_cases.snap
---
source: syncdoc-core/tests/negative.rs
expression: "apply_doc_injection(input, \"../docs\")"
---
# [doc = include_str ! ("../docs/legitimate_function.md")]
fn legitimate_function() {
    let variable = "fn not_a_function";
    some_function_call();
    if condition {
        another_fn_call();
    }
    match value {
        Pattern => yet_another_fn_call(),
        _ => final_fn_call(),
    }
}
struct MyStruct {
    field: String,
}
# [doc = include_str ! ("../docs/CODE_SAMPLE.md")]
const CODE_SAMPLE: &str = r#"
            fn example() {
                println!("This fn is in a string");
            }
        "#;
