syncdoc-core/tests/snapshots/negative__function_returning_fn_type.snap
---
source: syncdoc-core/tests/negative.rs
expression: "test_with_code(\"test_function_returning_fn_type\", code)"
---
#![doc = include_str!("../docs/lib.md")]



use syncdoc::omnidoc;

#[omnidoc(path = "docs")]

fn returns_fn() -> fn() -> i32 {
    || 42
}
