syncdoc-core/tests/snapshots/negative__function_with_fn_type_parameter.snap
---
source: syncdoc-core/tests/negative.rs
expression: "test_with_code(\"test_function_with_fn_type_parameter\", code)"
---
#![doc = include_str!("../docs/lib.md")]

    

    use syncdoc::omnidoc;

    #[omnidoc(path = "docs")]
    
fn function_with_fn_param(callback: fn(i32) -> String) -> String {
    callback(42)
}
