syncdoc-core/tests/snapshots/negative__ignores_fn_in_comments.snap
---
source: syncdoc-core/tests/negative.rs
expression: "test_with_code(\"test_ignores_fn_in_comments\", code)"
---
#![doc = include_str!("../docs/lib.md")]



use syncdoc::omnidoc;

#[omnidoc(path = "docs")]

// fn this_is_commented_out() {}
/* fn this_is_also_commented() {} */

fn actual_function() {
    // fn another_comment_function() {}
    println!("Hello");
}

/// Documentation comment with fn example() {}
fn documented_function() {}
