syncdoc-core/tests/snapshots/negative__ignores_fn_in_string_literals.snap
---
source: syncdoc-core/tests/negative.rs
expression: "test_with_code(\"test_ignores_fn_in_string_literals\", code)"
---
#![doc = include_str!("../docs/lib.md")]

    

    use syncdoc::omnidoc;

    #[omnidoc(path = "docs")]
    
fn real_function() {
    let msg = "This fn is not a function";
    let code_str = r#"fn fake_function() { return "not real"; }"#;
    println!("fn appears in this string too");
}

const TEMPLATE: &str = "fn template_function() {}";
