syncdoc-core/tests/snapshots/negative__ignores_type_alias_with_fn.snap
---
source: syncdoc-core/tests/negative.rs
expression: "apply_doc_injection(input, \"../docs\")"
---
# [doc = include_str ! ("../docs/FnPointer.md")]
type FnPointer = fn() -> i32;
