syncdoc-core/tests/snapshots/negative__trait_method_declarations.snap
---
source: syncdoc-core/tests/negative.rs
expression: "test_with_code(\"test_trait_method_declarations\", code)"
---
#![doc = include_str!("../docs/lib.md")]



use syncdoc::omnidoc;

#[omnidoc(path = "docs")]

trait MyTrait {
    fn trait_method(&self);

    fn default_method(&self) {
        println!("This has a body and should be documented");
    }
}

// Implement the trait so it compiles
struct MyImpl;
impl MyTrait for MyImpl {
    fn trait_method(&self) {}
}
