syncdoc-core/tests/snapshots/negative__trait_with_default_method.snap
---
source: syncdoc-core/tests/negative.rs
expression: "test_with_code(\"test_trait_with_default_method\", code)"
---
#![doc = include_str!("../docs/lib.md")]

    

    use syncdoc::omnidoc;

    #[omnidoc(path = "docs")]
    
trait MyTrait {
    fn default_method(&self) {
        println!("This has a body and should be documented");
    }
}

struct MyStruct;

impl MyTrait for MyStruct {}

fn test_main() {
    let my_struct = MyStruct;
    my_struct.default_method();
}
